correcion de links

--- a/site/views/cart.ejs
+++ b/site/views/cart.ejs
@@ -97,7 +97,9 @@
                     </div>
                 </section>
 
-
+<!-- Footer section -->
+<%- include('partials/footer.ejs')%>
+<!-- Footer section end -->
 
     </body>
 
