--- a/site/views/detalleProductos.ejs
+++ b/site/views/detalleProductos.ejs
@@ -115,7 +115,9 @@
                 </div>
             </main>
     </div>
-
+<!-- Footer section -->
+<%- include('partials/footer.ejs')%>
+<!-- Footer section end -->
 </body>
 
 </html>
