--- a/site/views/editProduct.ejs
+++ b/site/views/editProduct.ejs
@@ -42,7 +42,9 @@
         </div>
         </form>
     </div>
-
+<!-- Footer section -->
+<%- include('partials/footer.ejs')%>
+<!-- Footer section end -->
             
 
 </body>
