--- a/site/views/login.ejs
+++ b/site/views/login.ejs
@@ -11,7 +11,7 @@
 <body>
     <div class="login-box">
         <div class="lb-logo">
-            <img src="../images/logo-elMercado.png" alt="logo-El-Mercado">
+           <a href="/"><img src="../images/logo-elMercado.png" alt="logo-El-Mercado"></a>
         </div>
         <div class="separador"></div>
         <div class="lb-header">
