--- a/site/views/partials/navigation.ejs
+++ b/site/views/partials/navigation.ejs
@@ -1,6 +1,6 @@
 <ul class="main-menu">
     <li><a href="/">Inicio</a></li>
-    <li><a href="#">Comprar</a>
+    <li><a href="/products">Comprar</a>
         <ul class="sub-menu">
             <li><a href="#">Ropa</a></li>
             <li><a href="#">Tecnologia</a></li>
@@ -20,7 +20,6 @@
             <li><a href="/products/2/edit">Edit Product</a></li>
             <li><a href="/products/create">Create Product</a></li>
             <li><a href="/cart">Cart Page</a></li>
-            <li><a href="./checkout.html">Checkout Page</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/register">Register</a></li>
         </ul>
