--- a/site/views/profile.ejs
+++ b/site/views/profile.ejs
@@ -35,7 +35,9 @@
                     </div>
                 </div>
 
-                <body>
+               <!-- Footer section -->
+	<%- include('partials/footer.ejs')%>
+	<!-- Footer section end -->
 
                 </body>
 
