--- a/site/views/partials/footer.ejs
+++ b/site/views/partials/footer.ejs
@@ -1,14 +1,14 @@
 <section class="footer-section">
     <div class="container">
         <div class="footer-logo text-center">
-            <a href="index.html"><img src="./images/logo-footer.png" alt=""></a>
+            <a href="/"><img src="/images/logo-footer.png" alt=""></a>
         </div>
         <div class="row">
             <div class="col-lg-3 col-sm-6">
                 <div class="footer-widget about-widget">
                     <h2>Sobre nosotros</h2>
                     <p>Donec vitae purus nunc. Morbi faucibus erat sit amet congue mattis. Nullam frin-gilla faucibus urna, id dapibus erat iaculis ut. Integer ac sem.</p>
-                    <img src="images/img/cards.png" alt="">
+                    <img src="/images/cards.png" alt="">
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6">
@@ -36,7 +36,7 @@
                     <h2>BLOG</h2>
                     <div class="fw-latest-post-widget">
                         <div class="lp-item">
-                            <div class="lp-thumb set-bg" data-setbg="images/logo-dh.png"></div>
+                            <div class="lp-thumb set-bg" data-setbg="/images/logo-dh.png"></div>
                             <div class="lp-content">
                                 <h6>Primeros Pasos</h6>
                                 <span>Abr 21, 2020</span>
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                         <div class="lp-item">
-                            <div class="lp-thumb set-bg" data-setbg="images/logo-dh.png"></div>
+                            <div class="lp-thumb set-bg" data-setbg="/images/logo-dh.png"></div>
                             <div class="lp-content">
                                 <h6>Segundo Sprint</h6>
                                 <span>Mayo 21, 2020</span>
@@ -96,11 +96,11 @@
 </section>
 
 <!--====== Javascripts & Jquery ======-->
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.slicknav.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.nicescroll.min.js"></script>
-<script src="js/jquery.zoom.min.js"></script>
-<script src="js/jquery-ui.min.js"></script>
-<script src="js/main.js"></script>
+<script src="/js/jquery-3.2.1.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/jquery.slicknav.min.js"></script>
+<script src="/js/owl.carousel.min.js"></script>
+<script src="/js/jquery.nicescroll.min.js"></script>
+<script src="/js/jquery.zoom.min.js"></script>
+<script src="/js/jquery-ui.min.js"></script>
+<script src="/js/main.js"></script>
