--- a/site/views/editProduct.ejs
+++ b/site/views/editProduct.ejs
@@ -1,51 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!-- Redirect, cambiar del home para el detalle de productos, está con redirect pero no refresca. está mal.
+<!-- Redirect, cambiar del home para el detalle de productos, está con redirect pero no refresca. está mal.
     Cambiar la ruta para buscar y guardar las imagenes
     configurar la edición de files con multer -->
+
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> <%= title %></title>
-    
-  
-     <%- include('partials/head.ejs')%>
+    <title>
+        <%= title %>
+    </title>
 
-    </head>
+
+    <%- include('partials/head.ejs')%>
+
+</head>
+
 <body>
     <%- include('partials/header.ejs')%>
-    <div id="main" class="container-fluid mt-3">
-        <form method="POST" class="form-inline col-12">
-            <div class="col-12 col-md-6">
-                <img src="/images/products/<%=prod.id%>/<%=prod.image%>" class="rounded mx-auto img-fluid d-block img-thumbnail col-md-8 float-md-left" alt="No Image">
-                <input type="file" id="imageEdit" class="form-control-file mb-3" data-default-file="" data-height="500">
-            </div>
-            <div class="col-md-6">
-                <% for (let prop in prod) { %>
-                        <% if(prop == 'id' || prop == 'image'){ %>
+        <div id="main" class="container-fluid mt-3">
+            <form method="POST" class="form-inline col-12">
+                <div class="col-12 col-md-6">
+                    <img src="/images/products/<%=prod.id%>/<%=prod.image%>" class="rounded mx-auto img-fluid d-block img-thumbnail col-md-8 float-md-left" alt="No Image">
+                    <input type="file" id="imageEdit" class="form-control-file mb-3" data-default-file="" data-height="500">
+                </div>
+                <div class="col-md-6">
+                    <% for (let prop in prod) { %>
+                        <% if(prop == 'id' || prop == 'image' ){ %>
                             <div class="input-group-prepend mb-2">
-                                <label class="input-group-text text-left text-capitalize col-md-4"><%= `${prop}:` %></label>
-                                <input name="<%= prop %>" type="text" readonly class="input-group form-control col-8" placeholder="<%= `${prod[prop]}` %>">
+                                <label hidden class="input-group-text text-left text-capitalize col-md-4"><%= `${prop}:` %></label>
+                                <input name="<%= prop %>" type="text" hidden class="input-group form-control col-8" value="<%= `${prod[prop]}` %>">
                             </div>
-                        <% } else if(prop != 'id' && prop != 'image' ){ %>
-                            <div class="input-group-prepend mb-2">
-                                <label class="input-group-text text-capitalize col-md-4"><%= `${prop}:` %></label>
-                                <input name="<%= prop %>" type="text" class="input-group form-control col-8" placeholder="<%= `${prod[prop]}` %>">
-                            </div>
-                        <% }; %>
-                <% }; %>
-            <div class="form-actions form-inline btn-toolbar mt-3 ml-auto text-center ">
-                <input type="submit" value="Editar" formaction="/products/<%= prod.id %>/edit?_method=PUT" class="btn btn-primary btn-md-lg m-md-auto col-12 col-md-5 mb-3">
-                <input type="submit" value="Eliminar" formaction="/products/<%= prod.id %>/delete?_method=DELETE" class="btn btn-danger btn-md-lg m-md-auto col-md-5">
-            </div>
+                            <% } else if( prop == 'createdAt' || prop == 'updatedAt'){ %>
+                                <div class="input-group-prepend mb-2">
+                                </div>
+                                <% } else if(prop != 'id' && prop != 'image' ){ %>
+                                    <div class="input-group-prepend mb-2">
+                                        <label class="input-group-text text-capitalize col-md-4"><%= `${prop}:` %></label>
+                                        <input name="<%= prop %>" type="text" class="input-group form-control col-8" placeholder="<%= `${prod[prop]}` %>" aria-describedby="addon-wrapping">
+                                    </div>
+                                    <% }; %>
+                                        <% }; %>
+                                            <div class="form-actions form-inline btn-toolbar mt-3 ml-auto text-center ">
+                                                <input type="submit" value="Editar" formaction="/products/<%= prod.id %>/edit?_method=PUT" class="btn btn-primary btn-md-lg m-md-auto col-12 col-md-5 mb-3">
+                                                <input type="submit" value="Eliminar" formaction="/products/<%= prod.id %>/delete?_method=DELETE" class="btn btn-danger btn-md-lg m-md-auto col-md-5">
+                                            </div>
+                </div>
+            </form>
         </div>
-        </form>
-    </div>
-<!-- Footer section -->
-<%- include('partials/footer.ejs')%>
-<!-- Footer section end -->
-            
+        <!-- Footer section -->
+        <%- include('partials/footer.ejs')%>
+            <!-- Footer section end -->
+
 
 </body>
+
 </html>
