--- a/site/views/prueba.ejs
+++ b/site/views/prueba.ejs
@@ -6,6 +6,16 @@
         <body>
             <h1>HOLA</h1>
 
+            <ul>
+                <% for (producto of products) { %>
+                    <li>
+                        
+                            <%= producto.discount %>
+                        
+                    </li>
+                <% } %>
+            </ul>
+
         </body>
 
      </html>
