Se eliminaron los models que estaban en Plural

--- a/site/views/prueba.ejs
+++ b/site/views/prueba.ejs
@@ -10,7 +10,7 @@
                 <% for (producto of products) { %>
                     <li>
                         
-                            <%= producto.discount %>
+                            <%= producto.category_id %>
                         
                     </li>
                 <% } %>
