--- a/site/views/partials/browser.ejs
+++ b/site/views/partials/browser.ejs
@@ -1,4 +1,4 @@
 <form action="/search" method="GET" class="header-search-form">
-    <input type="text" name="search" placeholder="Buscar en El Mercado ....">
+    <input type="text" name="search" placeholder="Buscar en El Mercado Liebre....">
     <button type="submit"><i class="flaticon-search"></i></button>
 </form>
