--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -9,10 +9,7 @@
                     </a>
                 </div>
                 <div class="col-xl-6 col-lg-5">
-                    <form class="header-search-form">
-                        <input type="text" placeholder="Buscar en El Mercado ....">
-                        <button><i class="flaticon-search"></i></button>
-                    </form>
+                    <%- include('browser.ejs')%>
                 </div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="user-panel">
