--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -72,7 +72,7 @@
 				%>
 				<div class="product-item">
 					<div class="pi-pic">
-						<img src="/images/<%= product.image %>" alt="<%= product.name %>">
+						<img src="/images/products/<%= product.id %>/<%= product.image %>" alt="<%= product.name %>">
 						<div class="pi-links">
 							<a href="/products/<%= product.id %>" class="add-card"><i class="flaticon-bag"></i><span>COMPRAR</span></a>
 							<a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
@@ -114,7 +114,7 @@
 					
 					<div class="product-item">
 						<div class="pi-pic">
-							<img src="/images/<%= product.image %>"alt="<%= product.name %>">
+							<img src="/images/products/<%= product.id %>/<%= product.image %>" alt="<%= product.name %>">
 							<div class="pi-links">
 								<a href="/products/<%= product.id %>" class="add-card"><i class="flaticon-bag"></i><span>COMPRAR</span></a>
 								<a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
