--- a/site/views/products.ejs
+++ b/site/views/products.ejs
@@ -66,7 +66,7 @@
 			%>
 			<div class="product-item">
 				<div class="pi-pic">
-					<img src="/images/<%= product.image %>" alt="<%= product.name %>">
+					<img src="/images/products/<%= product.id %>/<%= product.image %>" alt="<%= product.name %>">
 					<div class="pi-links">
 						<a href="/products/<%= product.id %>" class="add-card"><i class="flaticon-bag"></i><span>COMPRAR</span></a>
 						<a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
@@ -108,7 +108,7 @@
 				
 				<div class="product-item">
 					<div class="pi-pic">
-						<img src="/images/<%= product.image %>"alt="<%= product.name %>">
+						<img src="/images/products/<%= product.id %>/<%= product.image %>" alt="<%= product.name %>">
 						<div class="pi-links">
 							<a href="/products/<%= product.id %>" class="add-card"><i class="flaticon-bag"></i><span>COMPRAR</span></a>
 							<a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
