--- a/site/views/profile.ejs
+++ b/site/views/profile.ejs
@@ -1,44 +1,46 @@
-  
-    <!DOCTYPE html>
-    <html lang="en">
-        <!-- pendientes:
+<!DOCTYPE html>
+<html lang="en">
+<!-- pendientes:
         - agregar botón para editar profile, cambiar de usuario o checkout.
     -->
-    <head>
-        <meta charset="UTF-8">
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title> Cart</title>
-        
-      
-         <%- include('partials/head.ejs')%>
-    
-        </head>
-    
-        <body>
-           
-            <%- include('partials/header.ejs')%>
-                <div class="container form-inline">
-                    <div class="col-12 col-md-6 mt-2">
-                        <img src="/images/users/<%=user.id%>/<%=user.avatar%>" class="rounded mx-auto img-fluid d-block img-thumbnail col-md-8 float-md-left" alt="No Image">
-                        <!-- <input type="file" id="imageEdit" class="form-control-file mb-3" data-default-file="" data-height="500"> -->
-                    </div>
-                    <div>
-                        <% for (let userItem in user) { %>
-                            <% if(!userItem.includes('password')){ %>
-                                <div class="input-group-prepend mt-2">
-                                    <label class="input-group-text text-left text-capitalize col-4"><%= `${userItem}:` %></label>
-                                    <input name="<%= userItem %>" type="text" readonly class="input-group form-control col-10" placeholder="<%= `${user[userItem]}` %>">
-                                </div>
-                                <% } %>
-                                    <% } %>
-                    </div>
-                </div>
 
-               <!-- Footer section -->
-	<%- include('partials/footer.ejs')%>
-	<!-- Footer section end -->
+<head>
+    <meta charset="UTF-8">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>
+        <%= tag %>
+    </title>
 
-                </body>
 
-                </html>
+    <%- include('partials/head.ejs')%>
+
+</head>
+
+<body>
+
+    <%- include('partials/header.ejs')%>
+        <div class="container form-inline">
+            <div class="col-12 col-md-6 mt-2">
+                <img src="/images/users/<%=user.id%>/<%=user.avatar%>" class="rounded mx-auto img-fluid d-block img-thumbnail col-md-8 float-md-left" alt="No Image">
+                <!-- <input type="file" id="imageEdit" class="form-control-file mb-3" data-default-file="" data-height="500"> -->
+            </div>
+            <div>
+                <% for (let userItem in user) { %>
+                    <% if(!userItem.includes('password')){ %>
+                        <div class="input-group-prepend mt-2">
+                            <label class="input-group-text text-left text-capitalize col-4"><%= `${userItem}:` %></label>
+                            <input name="<%= userItem %>" type="text" readonly class="input-group form-control col-10" placeholder="<%= `${user[userItem]}` %>">
+                        </div>
+                        <% } %>
+                            <% } %>
+            </div>
+        </div>
+
+        <!-- Footer section -->
+        <%- include('partials/footer.ejs')%>
+            <!-- Footer section end -->
+
+</body>
+
+</html>
