User en header / funcion Logout

--- a/site/views/detalleProductos.ejs
+++ b/site/views/detalleProductos.ejs
@@ -24,7 +24,7 @@
                 <div class="primerColumna">
                     <!-- imagenes -->
                     <div class="imagenProducto">
-                        <img class="producto" src="/images/<%= products.image %>">
+                        <img class="producto" src="/images/products/<%= products.id %>/<%= products.image %>">
                     </div>
                     <!-- imagenes -->
 
