--- a/site/views/profileV2.ejs
+++ b/site/views/profileV2.ejs
@@ -36,7 +36,7 @@
                 <p></p>
                
                 <a href="/profile/edit/<%=user.id%>" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Editar</a>
-<a href="#" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Salir</a>
+<a href="/logout" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Salir</a>
                 
               </div>
               
