--- a/site/public/css/register.css
+++ b/site/public/css/register.css
@@ -87,36 +87,36 @@ body {
   .social-login a:last-child {
     background-color: #df4a32;
   }
-  .form-box {
+    .form-box {
     display: flex;
     width: 100%;
     flex-wrap: wrap;
     justify-content: space-around;
-  }
+    margin-top: 20px;
+  }/*
   .lb-form {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
   
     width:60%;
-  }
-  .lb-form input {
-    margin-top: 20px;
+  }*/
+ .lb-form input {
+  
+  color: #1c1c1c;
     width: 100%;
     padding: 20px;
     font-size: 1rem;
     font-weight: 200;
-    border-radius: 10px;
-    background: #f6f6f6;
-    border: 0px;
+
   }
   .lb-form input:focus {
     border-color: #358efb;
-  }
+  } 
   
   .btn-registro {
     margin: 20px auto;
-    width: 250px;
+    width: 100%;
     padding: 20px;
     color: #fff;
     font-size: 1em;
@@ -135,18 +135,14 @@ body {
     font-family: "Montserrat", sans-serif;
     width: 100%;
   font-size: 14px;
-  margin-top: 20px;
-  padding: 20px;
-  border-radius: 6px;
-  border: 2px solid #114bdf69;
+  
+  height: 6vh;
+
 }
 .lb-form select option {
     font-family: "Montserrat", sans-serif;
   font-size: 14px;
-  margin-top: 10px;
-  padding: 20px;
-  border-radius: 6px;
-  border: 2px solid #114bdf69;
+
 }
 
 .errores {
