--- a/site/views/register.ejs
+++ b/site/views/register.ejs
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/4fa9f35e5d.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/register.css">
+   <!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<!-- Google Fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Bootstrap core CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+  
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;1,200&display=swap" rel="stylesheet">
+   
+   <script src="/js/register.js" ></script>
     <title>Registro de usuarios</title>
 </head>
-<body>
-    <div class="login-box">
+<body style="background-color: #2ca2ca;"> 
+
+    <div class="login-box container">
         <div class="lb-logo">
           <a href="/"><img src="../images/logo-elMercado.png" alt="logo-El-Mercado"></a>
         </div>
@@ -42,12 +54,60 @@
               <% } %>
             </div>
            
-        <form action="/register" class="lb-form" method="POST" enctype="multipart/form-data" >
-        <input type="text" name="first_name" placeholder="Ingresá tu nombre">
-        <input type="text" name="last_name" placeholder="Ingresá tu apellido">
-        <input type="email" name="email" placeholder="Ingresá tu correo">
-        <input type="password" name="password" placeholder="Ingresá una contraseña">
-        <input type="password" name="password_repeat" placeholder="Ingresa nuevamente tu contraseña">
+        <form action="/register" class="lb-form register needs-validation register" novalidate method="POST" enctype="multipart/form-data" >
+
+          <div class="form-row">
+            <div class="col-md-12 mb-3">
+              
+              <input type="text" class="form-control" id="first_name" placeholder="Ingresá tu nombre"  required>
+              <div class="valid-feedback">
+                Looks good!
+              </div>
+            </div>
+          </div>
+
+            <div class="form-row">
+              <div class="col-md-12 mb-3">
+                
+                <input type="text" class="form-control" id="last_name" name="last_name" placeholder="Ingresá tu apellido" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="col-md-12 mb-3">
+                
+                <input type="email" class="form-control" id="email" name="email" placeholder="Ingresá tu correo" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-md-12 mb-3">
+                
+                <input type="password" class="form-control" id="password" name="password" placeholder="Ingresá una contraseña" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="col-md-12 mb-3">
+                
+                <input type="password" class="form-control" id="password_repeat" name="password_repeat" placeholder="Ingresá nuevamente tu contraseña" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="col-md-12 mb-3">
+       
         <select name="user_type_id" class="custom-select" >
           <% for (let i=0; i < roles.length; i++) { %>
   
@@ -60,11 +120,50 @@
          <% } %>
          
       </select>
-        <input type="file"  id="avatar" name="avatar" placeholder="Ingresa un avatar para tu perfil" class="file" >
-        <button type="submit" class="btn-registro">  REGISTRARME </button>
+      
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="col-md-12 mb-3 file">
+
+        <input type="file"  id="avatar" name="avatar"  placeholder="Ingresa un avatar para tu perfil" value="pepe" class="file" >
+
+
+      
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div class="col-md-12 mb-3 file">
+        <button type="submit" id="submit" class="btn-registro">  REGISTRARME </button>
         
+
+      </div>
+    </div>
         </form>
     </div>
     </div>
+
+  
+
+<script type="text/javascript" src="/js/register.js" > </script>
+
+
+    <!-- JQuery -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
+<!-- Sweet Alert JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+<script src="sweetalert2/dist/sweetalert2.all.min.js"></script>
+ 
+<!-- Include a polyfill for ES6 Promises (optional) for IE11 -->
+<script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.js"></script>
+
+</body>
 </body>
 </html>
