--- a/site/views/register.ejs
+++ b/site/views/register.ejs
@@ -126,7 +126,7 @@
   <div class="form-row">
     <div class="col-md-12 mb-3 file">
 
-        <input type="file"  id="avatar" name="avatar"  placeholder="Ingresa un avatar para tu perfil" value="pepe" class="file" >
+        <input type="file"  id="avatar" name="avatar"  placeholder="Ingresa un avatar para tu perfil" class="file" accept=".jpg,.jpeg,.png" onchange="validateFileType()" >
 
 
       
@@ -147,6 +147,21 @@
   
 
 <script type="text/javascript" src="/js/register.js" > </script>
+
+<!-- <script>
+  let file = document.getElementById("avatar");
+function validateFileType(){
+  var avatar = file.value,
+  idxDot = avatar.lastIndexOf(".") + 1,
+  extFile = avatar.substr(idxDot, avatar.length).toLowerCase();
+  if (extFile=="jpg" || extFile=="jpeg" || extFile=="png"){
+    //TO DO
+  }else{
+    alert("Only jpg/jpeg and png files are allowed!");
+    file.value = "";  // Reset the input so no files are uploaded
+  }
+}
+</script> -->
 
 
     <!-- JQuery -->
