--- a/site/views/blog.ejs
+++ b/site/views/blog.ejs
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
-<link rel="stylesheet" href="/css/blog.css">
-	<!-- Head section -->
-	<%- include('partials/head.ejs')%>
+    <link rel="stylesheet" href="/css/blog.css">
+    <!-- Head section -->
+    <%- include('partials/head.ejs')%>
     <!-- Head section end -->
- </head>
+</head>
+
 <body>
-	<!-- Page Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
+    <!-- Page Preloder -->
+    <div id="preloder">
+        <div class="loader"></div>
+    </div>
 
     <!-- Header section -->
     <%- include('partials/header.ejs')%>
     <!-- Header section end -->
-    
+
 
 
 
     <div class="container">
-        <br><br><h4>Recorrido realizado</h4>
+        <br><br>
+        <h4>Recorrido realizado</h4>
         <div class="row">
             <div class="col-md-12">
                 <div class="main-timeline">
                     <a href="#" class="timeline">
                         <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
                         <div class="timeline-content">
-                            <h3 class="title">SPRINT 1</h3>
+                            <h3 class="title">SPRINT 1 - It's Just the Beginning </h3>
                             <p class="description">
+                                "La única posibilidad de descubrir los límites de lo posible es aventurarse un poco más allá de ellos, hacia lo imposible".<br>
+                                <i>Arthur C. Clarke</i><br><br>
                                 El primer desafio nos requirio trabajo en equipo, conocernos, y
                                 sobre todas las cosas, creatividad, desde darle nombre a este proyecto,
-                                hasta generar la identidad visual, y con el camino recorrido aprendimos  
+                                hasta generar la identidad visual, y con el camino recorrido aprendimos
                                 lo importante de dedicarle tiempo a ORGANIZAR el proyecto... <br><br>
                                 ★ URL del repositorio con todos los colaboradores agregados.<br>
-★ Archivo README.md con<br>
-○ Temática del sitio y público objetivo<br>
-○ Listado de al menos 5 referentes<br>
-★ Wireframe de las siguientes páginas<br>
-○ Home<br>
-○ Detalle de producto<br>
-○ Carrito de compras<br>
-○ Formulario de registro<br>
-○ Formulario de carga de producto (para el administrador)<br>
-★ Opcional: Boceto o diseño gráfico del sitio (logo, colores, tipografías, etc)<br>
+                                ★ Archivo README.md con<br>
+                                ○ Temática del sitio y público objetivo<br>
+                                ○ Listado de al menos 5 referentes<br>
+                                ★ Wireframe de las siguientes páginas<br>
+                                ○ Home<br>
+                                ○ Detalle de producto<br>
+                                ○ Carrito de compras<br>
+                                ○ Formulario de registro<br>
+                                ○ Formulario de carga de producto (para el administrador)<br>
+                                ★ Opcional: Boceto o diseño gráfico del sitio (logo, colores, tipografías, etc)<br>
 
                                 <br>
                             </p>
@@ -53,19 +58,21 @@
                     <a href="#" class="timeline">
                         <div class="timeline-icon"><i class="fab fa-html5"></i></div>
                         <div class="timeline-content">
-                            <h3 class="title">SPRINT 2</h3>
+                            <h3 class="title">SPRINT 2 - HTML + CSS</h3>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis
+                                quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
                             </p>
                         </div>
                     </a>
                     <a href="#" class="timeline">
                         <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
                         <div class="timeline-content">
-                            <h3 class="title">SPRINT 3</h3>
+                            <h3 class="title">SPRINT 3 - TEMPLATE ENGINES</h3>
                             <p class="description">
                                 De la misma manera que usamos wireframes y bocetos para definir el sitio, corregirlo y
-determinar si es viable, vamos a estar haciendo lo mismo con los datos y la funcionalidad.
+                                determinar si es viable, vamos a estar haciendo lo mismo con los datos y la
+                                funcionalidad.
                                 <br><br>
                                 ★ Archivo retro.md con el resultado de la retrospectiva<br>
                                 ★ (Opcional) Archivo daily.md con sus opiniones sobre las dailies / weeklies<br>
@@ -84,11 +91,12 @@ determinar si es viable, vamos a estar haciendo lo mismo con los datos y la func
                     <a href="#" class="timeline">
                         <div class="timeline-icon"><i class="fas fa-user-secret"></i></div>
                         <div class="timeline-content">
-                            <h3 class="title">SPRINT 4</h3>
+                            <h3 class="title">SPRINT 4 - MIDDLEWARES</h3>
                             <p class="description">
                                 En programación siempre buscamos no repetirnos, así que cuando una tarea la estamos
-haciendo muchas veces en diferentes partes de nuestro código, la abstraemos. Es decir que
-aislamos ese comportamiento en un bloque de código reutilizable.<br><br>
+                                haciendo muchas veces en diferentes partes de nuestro código, la abstraemos. Es decir
+                                que
+                                aislamos ese comportamiento en un bloque de código reutilizable.<br><br>
                                 ★ Archivo retro.md con el resultado de la retrospectiva<br>
                                 ★ (Opcional) Archivo daily.md con sus opiniones sobre las dailies / weeklies<br>
                                 ★ Tablero de trabajo actualizado<br>
@@ -102,18 +110,20 @@ aislamos ese comportamiento en un bloque de código reutilizable.<br><br>
                                 ★ Rutas de huéspedes y usuarios<br>
                                 ○ Las de huéspedes deberán redireccionar al perfil si el usuario está logeado<br>
                                 ○ Las de usuarios deberán redireccionar al login si el usuario no está logeado<br>
-                            
+
                             </p>
                         </div>
                     </a>
                     <a href="#" class="timeline">
                         <div class="timeline-icon"><i class="fas fa-database"></i></div>
                         <div class="timeline-content">
-                            <h3 class="title">SPRINT 5</h3>
+                            <h3 class="title">SPRINT 5 - DATABASE</h3>
                             <p class="description">
-                                Pensar, diseñar, implementar una base de datos no es sencillo pero un buen diseño inicial va a
-asegurar tu éxito en el tiempo. Además implementarlo en Sequelize nos permite corrernos un
-poco de SQL y aprovechar todas las prestaciones de un buen ORM.<br><br>
+                                Pensar, diseñar, implementar una base de datos no es sencillo pero un buen diseño
+                                inicial va a
+                                asegurar tu éxito en el tiempo. Además implementarlo en Sequelize nos permite corrernos
+                                un
+                                poco de SQL y aprovechar todas las prestaciones de un buen ORM.<br><br>
                                 ★ Archivo retro.md con el resultado de la retrospectiva<br>
                                 ★ (Opcional) Archivo daily.md con sus opiniones sobre las dailies / weeklies<br>
                                 ★ Tablero de trabajo actualizado<br>
@@ -137,18 +147,44 @@ poco de SQL y aprovechar todas las prestaciones de un buen ORM.<br><br>
                             </p>
                         </div>
                     </a>
+                    <a href="#" class="timeline">
+                        <div class="timeline-icon"><i class="fa fa-check"></i></div>
+                        <div class="timeline-content">
+                            <h3 class="title">SPRINT 6 - VALIDACIONES</h3>
+                            <p class="description">
+                                Si el formulario se llena con datos inválidos no hay problema, el problema es si llegan
+                                a nuestra
+                                base de datos, ahí es donde se desata el caos y se rompe todo. ¡Para eso está la
+                                validación!.<br><br>
+                                ★ Archivo retro.md con el resultado de la retrospectiva<br>
+                                ★ (Opcional) Archivo daily.md con sus opiniones sobre las dailies / weeklies<br>
+                                ★ Tablero de trabajo actualizado<br>
+                                ★ Validaciones del backend con Express Validator:<br>
+                                ○ Registro de usuarios<br>
+                                ○ Login de usuarios<br>
+                                ○ Creación y modificación de productos<br>
+                                ○ (Opcional) Resto de los formularios del sitio<br>
+                                ★ Validaciones del frontend con JS + validator.js:<br>
+                                ○ Registro de usuarios<br>
+                                ○ Login de usuarios<br>
+                                ○ Creación y modificación de productos<br>
+                                ○ (Opcional) Resto de los formularios del sitio<br>
+                            </p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
 
 
-	<!-- Footer section -->
-	<%- include('partials/footer.ejs')%>
-	<!-- Footer section end -->
+    <!-- Footer section -->
+    <%- include('partials/footer.ejs')%>
+    <!-- Footer section end -->
 
 
 
-	
+
 </body>
+
 </html>
