--- a/site/views/partials/navigation.ejs
+++ b/site/views/partials/navigation.ejs
@@ -21,6 +21,8 @@
             <li><a href="/products/create">Create Product</a></li>
             <li><a href="/cart">Cart Page</a></li>
             <li><a href="/login">Login</a></li>
+            <li><a href="/profile">Profile Page</a></li>
+            <li><a href="/profile/edit/:id">Edit Profile Page</a></li>
             <li><a href="/register">Register</a></li>
         </ul>
     </li>
