--- a/site/views/addProduct.ejs
+++ b/site/views/addProduct.ejs
@@ -12,8 +12,24 @@
     
     <section class="container new-product col-12">
       <div class="product-detail col-sm-10 col-md-10 col-lg-10">
+        
+       
+       
         <h2>NUEVO PRODUCTO</h2>
         <p>Ingrese el detalle del producto que desea agregar</p>
+       
+        <div class="errores">
+          <% if (typeof errors != "undefined" ) { %>
+       
+            <ul>
+                <% errors.forEach(function(elemento){ %>
+                  <li>
+                    <%= elemento.msg %>
+                  </li>
+                <% }) %>
+            </ul>
+          <% } %>
+        </div> 
         <form
           id="newProduct"
           action="/products/create"
@@ -21,7 +37,7 @@
           class="detail"
           enctype="multipart/form-data"
         >
-          <input type="text" name="name" placeholder="Nombre del producto" />
+          <input type="text" id="name" name="name" placeholder="Nombre del producto" />
 
 
           <select name="category_id" >
@@ -40,7 +56,7 @@
          
           <textarea
             name="description"
-            id=""
+            id="description"
             cols="30"
             rows="5"
             placeholder="Breve descripcion del producto"
